[metadata]
name = ajb1970
version = 0.1
author = Andrew Baisley
author_email = andrew.baisley@gmail.com
description = A wrapper for SQLite designed to hold tables from the DfE.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajb1970/naubase
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src